# rustcraft

./: .gitignore  Cargo.toml  README.md
examples/: craft.rs  digtest.rs  ping.rs  spawn.rs  worldview.rs
src/: auth.rs  block.rs  chat.rs  entity.rs  item.rs  lib.rs  nbt.rs  nibble.rs  rcon.rs  recipe.rs  varint.rs  vec3.rs  window.rs
src/anvil/: chunk_nbt.rs  level_dat.rs  mod.rs  region.rs
src/bot/: conversions.rs  crafting.rs  inventory.rs  mod.rs
src/chunk/: biome_section.rs  bit_array.rs  chunk_column.rs  chunk_section.rs  constants.rs  mod.rs  palette_container.rs
src/path/: astar.rs  goals.rs  mod.rs  movements.rs  types.rs
src/physics/: aabb.rs  adapter.rs  attribute.rs  mod.rs  physics.rs
src/protocol/: auth.rs  client.rs  codec.rs  component.rs  compression.rs  encryption.rs  framing.rs  mod.rs  ping.rs  plugin_channels.rs  states.rs  value.rs
src/protocol/data/: protocol-schema.json
src/registry/: mod.rs  types.rs
src/world/: iterators.rs  mod.rs  raycast.rs  world.rs
